<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.ezbuy.platform</groupId>
		<artifactId>ezbuy</artifactId>
		<version>${revision}</version>
		<relativePath>../pom.xml</relativePath>
	</parent>
	<artifactId>auth-service</artifactId>
	<version>${revision}</version>
	<name>auth-service</name>
	<description>auth-service</description>

	<properties>
		<java.version>21</java.version>
		<revision>1.0-SNAPSHOT</revision>
		<keycloak.version>25.0.2</keycloak.version>
	</properties>

	<dependencies>
		<!-- internal -->
		<dependency>
			<groupId>com.ezbuy.platform</groupId>
			<artifactId>fw-commons</artifactId>
			<version>${revision}</version>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>io.github.hoangtien2k3</groupId>-->
<!--			<artifactId>fw-commons</artifactId>-->
<!--			<version>1.1.2</version>-->
<!--		</dependency>-->
		<dependency>
			<groupId>com.ezbuy.platform</groupId>
			<artifactId>auth-model</artifactId>
			<version>${revision}</version>
		</dependency>
		<dependency>
			<groupId>com.ezbuy.platform</groupId>
			<artifactId>noti-model</artifactId>
			<version>${revision}</version>
		</dependency>
		<!-- Base64 -->
		<dependency>
			<groupId>org.apache.mina</groupId>
			<artifactId>mina-core</artifactId>
			<version>2.2.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>5.1.0</version>
		</dependency>
		<!-- Keycloak-->
		<dependency>
			<groupId>org.keycloak</groupId>
			<artifactId>keycloak-admin-client</artifactId>
			<version>${keycloak.version}</version>
		</dependency>
		<dependency>
			<groupId>org.keycloak.bom</groupId>
			<artifactId>keycloak-adapter-bom</artifactId>
			<version>${keycloak.version}</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>5.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-compress</artifactId>
			<version>1.26.2</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.16.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
